# CodingNSTU

./: README.md
Semestr1/RGRinfo/: RGRinfo.sln
Semestr1/infa/: infa.sln
Semestr1/infa2/: infa2.sln
Semestr1/infa3/: infa3.sln
Semestr1/infa4/: infa4.sln
Semestr1/praktika5/: praktika5.sln
Semestr1/sessia_infa/: sessia_infa.sln
Semestr1/sessiya1/: sessiya1.sln
Semestr2/2laba_NIkiti/: 2laba_NIkiti.sln
Semestr2/7laba_proga/: 7laba_proga.sln  laba7_first.cpp  laba7_second.cpp
Semestr2/8laba_proga/: 8laba_proga.sln
Semestr2/Exam/: AVT-341-Buslaev.cpp  АВТ-341-Буслаев.doc
Semestr2/RGZ_proga/: RGZ_proga.sln  input.txt  output.txt
Semestr2/proga_1laba/: proga_1laba.sln
Semestr2/proga_2laba/: proga_2laba.sln
Semestr2/proga_3laba/: proga_3.2laba.sln
Semestr2/proga_4laba/: proga_4laba.sln
Semestr2/proga_5laba/: proga_5laba.sln
Semestr2/proga_6laba/: laba6.cpp  proga_6laba.sln
Semestr3/Laba4/: CMakeLists.txt  main.cpp
Semestr3/Laba5/: CMakeLists.txt  main.cpp
Semestr3/Laba5/src/ComplexLife/: ComplexLife.cpp  ComplexLife.h
Semestr3/Laba5/src/ComplexNum/: ComplexNum.cpp  ComplexNum.h
Semestr3/Laba5/src/ComplexStr/: ComplexStr.cpp  ComplexStr.h
Semestr3/Laba5/test-unit/: test.cpp
Semestr3/Laba7/: CMakeLists.txt  main.cpp
Semestr3/Laba7/src/: ComplexNum.cpp  ComplexNum.h  List.h
Semestr3/Tests_Catch/: CMakeLists.txt  main.cpp
Semestr3/Tests_Catch/src/ComplexLife/: ComplexLife.cpp  ComplexLife.h
Semestr3/Tests_Catch/src/ComplexNum/: ComplexNum.cpp  ComplexNum.h
Semestr3/Tests_Catch/src/ComplexStr/: ComplexStr.cpp  ComplexStr.h
Semestr3/Tests_Catch/test-unit/: test.cpp
Semestr3/kursovaya_2.8.4/: CMakeLists.txt  code_Buslaev_AVT-341.txt  main.cpp  Отчет по курсовой Буслаев АВТ-341.docx
Semestr3/laba8/: CMakeLists.txt  (+2 more)
(+334 files in other folders)
